💄 Fix footer z-index issues

--- a/components/footer/footer.scss
+++ b/components/footer/footer.scss
@@ -14,6 +14,8 @@
     rgba(107, 0, 207, 0) 100%
   );
 
+  z-index: $index-header-footer;
+
   @media (min-width: $sm) {
     row-gap: spacing(3);
   }
