--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -10,7 +10,7 @@
     rgba(107, 0, 207, 0) 100%
   );
 
-  z-index: 99;
+  z-index: $index-header-footer;
 
   @media (min-width: $lg) {
     padding: 0 spacing(4);
