--- a/styles/tokens.scss
+++ b/styles/tokens.scss
@@ -28,6 +28,7 @@ $index-filter: 1;
 $index-content: 5;
 $index-event-link: 5;
 $index-anchor-navigation: 10;
+$index-header-footer: 15;
 
 // Transitions
 $bezier-default: cubic-bezier(0.25, 0.1, 0.25, 1);
